[gd_scene load_steps=9 format=3 uid="uid://cebirxok2bvjt"]

[ext_resource type="Script" path="res://main.gd" id="1_jeih8"]
[ext_resource type="Texture2D" uid="uid://dxtajwquf7so" path="res://assets/coin-dash/grass.png" id="2_e2ksw"]
[ext_resource type="PackedScene" uid="uid://dqv41ym166dnq" path="res://scenes/entities/coin.tscn" id="2_tlnwh"]
[ext_resource type="PackedScene" uid="uid://d0wa84lwgtkvm" path="res://scenes/entities/coin-hero.tscn" id="3_fi88r"]
[ext_resource type="PackedScene" uid="uid://dykd06lqinty2" path="res://scenes/entities/HUD.tscn" id="5_bmyho"]
[ext_resource type="AudioStream" uid="uid://dff8hg8j2sxsc" path="res://assets/coin-dash/audio/Coin.wav" id="6_d0jfr"]
[ext_resource type="AudioStream" uid="uid://387cqt876nvx" path="res://assets/coin-dash/audio/Level.wav" id="7_x5idp"]
[ext_resource type="AudioStream" uid="uid://dwv0f8x8o44bm" path="res://assets/coin-dash/audio/EndSound.wav" id="8_kr1np"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jeih8")
coin_scene = ExtResource("2_tlnwh")
metadata/_edit_group_ = true

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 501.0
offset_bottom = 738.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e2ksw")
stretch_mode = 1

[node name="CoinHero" parent="." instance=ExtResource("3_fi88r")]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_bmyho")]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_d0jfr")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_x5idp")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_kr1np")

[connection signal="pickup" from="CoinHero" to="." method="_on_coin_hero_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
